<resources>
    <!-- DEFAULT STRINGS -->
    <string name="app_name">Scan-eipe</string>

    <!-- LOGIN INFORMATION STRINGS -->
    <string name="username">user name</string>
    <string name="password">password</string>
    <string name="login">LOG IN</string>

    <!-- CREATE INFORMATION STRINGS -->
    <string name="create">CREATE</string>
    <string name="email">email</string>
    <string name="made_account">Already have an account?</string>
    <string name="forget_password"><u>Forgot Password?</u></string>

    <!-- SIGN UP STRINGS -->
    <string name="signup_question">Don\'t have an account?</string>
    <string name="signup">SIGN UP</string>

    <!-- LANDING PAGE STRINGS -->
    <string name="landing_page_title">Welcome to Sca-ceipe!</string>
    <string name="landing_page_welcome">Ready to make meal prep a breeze?</string>
    <string name="landing_page_continue">Let\'s go!</string>

    <!-- PROFILE PAGE STRINGS -->
    <string name="profile_information"><u>PROFILE INFORMATION</u></string>
    <string name="USER">"USER" !</string>
    <string name="profile_username">user name:</string>
    <string name="profile_password">password:</string>
    <string name="profile_change_button">CHANGE PASSWORD</string>
    <string name="logout">LOG OUT</string>

    <!-- FORGOT PASSWORD STRINGS -->
    <string name="forgotPassword">Please enter your email below.</string>
    <string name="submit">SUBMIT</string>
    <string name="enterEmail">enter email here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- COMING SOON STRINGS -->
    <string name="defaultMessage">RECIPE COMING SOON!</string>
    <string name="sorry">We are sorry for any inconvenience this may have caused.</string>
    <string name="camera">CAMERA COMING SOON!</string>


    <string name="receipeSubtitle">RECEIPE:</string>
    <!-- RECIPES -->
    <string name="BeefWellingtonCookingTime">COOKING TIME: 1.5 hours</string>
    <string name="BeefWellingtonIngredients">INGREDIENTS:"
        Beef-Tenderloin (3 pounds)
        Prociutto (10 slices)
        Portobello (12 ounces)
        Shallot (1 whole)
        Olive Oil (12 tablespoons)
        Clove (2 whole)
        Thyme (2 teaspoon)
        Dry Vermouth (1 tablespoon)
        Dijon Mustard (2 tablespoon)
        Egg (1 whole)
        Puff Pastry (2 tablespoon)
        Unsalted Butter (2 tablespoon)" </string>
    <string name="BeefWellingtonRecipe">Make the stir fry sauce first. Combine the soy sauce, water, brown sugar, sesame oil, garlic, ginger, and cornstarch in a small bowl. Set the sauce aside.Chop the vegetables into similar-sized pieces. It is up to you whether you slice, dice, or cut into any other shape you prefer. Add the cooking oil to a very large skillet or wok. Heat over medium-high. When the pan and oil are very hot (but not smoking), add the hardest vegetables first: carrots and broccoli. Cook and stir for about a minute, or just until the broccoli begins to turn bright green. Next, add the mushrooms and sugar snap peas. Continue to cook and stir for a minute or two more, or just until the mushrooms begin to soften. Finally, add the softest vegetables, bell pepper and onion. Continue to cook and stir just until the onion begins to soften. Give the stir fry sauce another brief stir, then pour it over the vegetables. Continue to cook and stir until the sauce begins to simmer, at which point it will thicken and turn glossy. Remove the vegetables from the heat, or continue to cook until they are to your desired doneness. Top the stir fry with sesame seeds and serve!</string>
    <string name="BellCookingTime">COOKING TIME: 25 minutes</string>
    <string name="BellIngredients">INGREDIENTS:"
        Bell Pepper (2 whole)
        Vegetable Oil (1 tablespoon)
        Chili Powder (1/4 teaspoon)
        Grounded Cumin (1/4 teaspoon)
        Grounded Beef (4 ounces)
        Shredded Mexican Blend Cheese (1 cup)
        Guacamole (1/4 cup)
        Pico-de-Gallo (1/4 cup)
        Sour Cream (2 tablespoons)" </string>

    <string name="BellRecipe">Cut the bell peppers through the stem into sixths, remove the stem and seeds. Transfer to a large microwave safe bowl, add a splash of water and a pinch of salt. Cover and microwave until the pepper pieces are pliable, about 4 minutes. Let cool slightly and then arrange close together on a foil-lined baking sheet, cut sides-up.
Meanwhile, heat the oil in a large nonstick skillet over medium-high heat. Add the chili powder and cumin and cook, stirring, until fragrant and toasted, about 30 seconds. Add the ground beef and 1/4 teaspoon salt and cook, stirring and breaking up into bite-size pieces, until browned and cooked through, about 4 minutes.
Preheat the broiler. Spoon some beef mixture onto each pepper piece. Sprinkle with cheese and broil until the cheese melts, about 1 minute. Top with dollops of guacamole and pico de gallo. Thin the sour cream out with a little water and drizzle over the nachos.</string>
    <string name="StirfryTime">COOKING TIME: 25 minutes</string>
    <string name="StirfryIngredients">INGREDIENTS:"
        Soy Sauce (1/4 cup)
        Water (1/4 cup)
        Brown Sugar (2 tablespoons)
        Toasted Sesame Oil (1 teaspoon)
        Minced Garlic Gloves (2 whole)
        Grated Ginger (1 teaspoon)
        Cornstarch (1 tablespoon)
        Broccoli (1/4 pound)
        Carrot (2 whole)
        Mushroom (8 ounces)
        Sugar-Snap-Peas (8 ounces)
        Small Onion (1 whole)
        Red Bell Pepper (1 whole)
        Cooking Oil (2 tablespoons)
        Sesame Seed (1 teaspoon)" </string>

    <string name="StirFryRecipe">Make the stir fry sauce first. Combine the soy sauce, water, brown sugar, sesame oil, garlic, ginger, and cornstarch in a small bowl. Set the sauce aside.
Chop the vegetables into similar-sized pieces. It is up to you whether you slice, dice, or cut into any other shape you prefer.
Add the cooking oil to a very large skillet or wok. Heat over medium-high. When the pan and oil are very hot (but not smoking), add the hardest vegetables first: carrots and broccoli. Cook and stir for about a minute, or just until the broccoli begins to turn bright green.
Next, add the mushrooms and sugar snap peas. Continue to cook and stir for a minute or two more, or just until the mushrooms begin to soften.
Finally, add the softest vegetables, bell pepper and onion. Continue to cook and stir just until the onion begins to soften.
Give the stir fry sauce another brief stir, then pour it over the vegetables. Continue to cook and stir until the sauce begins to simmer, at which point it will thicken and turn glossy. Remove the vegetables from the heat, or continue to cook until they are to your desired doneness.
Top the stir fry with sesame seeds and serve!</string>

    <string name="PizzaSubtitle">RECEIPE:</string>
    <!-- RECIPES -->

    <string name="PizzaCookingTime">COOKING TIME: 30 minutes</string>
    <string name="PizzaIngredients"> "
        INGREDIENTS:
        Olive oil (2 tsp)
        Ground black pepper(1/4 tsp)
        Minced garlic (2 cloves)
        Mushroom (1 8-ounce package)
        Marinara sauce (1 cup)
        Pizza crust (1 whole)
        shredded mozzarella cheese(1/2 cup)
        shredded fontina cheese(1/2 cup)
        Parmesan cheese(1/2 cup)
        roasted bell peppers(3/4 cup)
        Black olives (2 tablespoon)
        capers (1 tablespoon)" </string>

    <string name="PIZZARecipe"> "
        Step 1: Preheat oven to 500°.
Step 2:Heat 2 teaspoons olive oil in a large nonstick skillet over medium-high heat. Add black pepper, minced garlic, and mushrooms; sauté for 5 minutes or until mushrooms are tender and most of liquid evaporates.
Step 3: Spread sauce over the pizza crust, leaving a 1/2-inch border, and top with mushroom mixture. Sprinkle evenly with mozzarella, fontina, and Parmesan cheeses. Top with roasted red bell peppers, 1 tablespoon capers, and artichokes. Bake at 500° for 10 minutes or until cheese melts and begins to brown. Let pizza stand for 5 minutes before serving

    "</string>

    <string name="PenneCookingTime">COOKING TIME: 25 minutes</string>
    <string name="PenneIngredients"> "
        INGREDIENTS:
        Penne pasta (1 12 oz box)
        Olive Oil spray
        Chopped Onion (1 whole)
        Sliced zucchini (1 teaspoon)
        Frozen peas (1 teaspoon)
        Pesto sauce (1/2 cup)
        Teaspoon pepper flakes (1 teaspoon)
        Shredded parmesan (1/4 cup)" </string>


    <string name="PenneARecipe">"
     Step 1.Cook the pasta al dente according to the package.
Step 2.Meanwhile, heat a large skillet over medium heat. Spray with olive oil and add in the onions and zucchini.
Step 3.Cook the veggies for 8-10 minutes until they start to soften. Turn off the heat and add in the peas.
Step 4.Once the pasta is done cooking, drain and add to the skillet along with the Homemade Pesto Sauce and if desired pepper flakes.
Step 5.Mix well and move to a large glass bowl. Sprinkle with cheese or nutritional yeast (if you desire) and cover.
Step 6.Move the the fridge to chill completely, 1-3 hours. Toss together once more before serving."</string>

    <string name="PancakeCookingTime">COOKING TIME: 25 minutes</string>
    <string name="pancakeIngredients"> "
        INGREDIENTS:
        All-purpose flour (1 1/2 cups)
        Baking powder (3 1/2 tsp)
        White sugar (1 tablespoon)
        salt (1/4 or more for taste)
        Milk (1 1/4 cup)
        Melted butter (3 tablespoons)
        Egg (1 whole)" </string>

    <string name="PancakeRecipe">"
        Step 1. Sift flour, baking powder, sugar, and salt together in a large bowl. Make a well in the center and add milk, melted butter, and egg; mix until smooth.
Step 2. Heat a lightly oiled griddle or pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake; cook until bubbles form and the edges are dry, about 2 to 3 minutes. Flip and cook until browned on the other side. Repeat with remaining batter.

    </string>

    <string name="CobbCookingTime">COOKING TIME: 30 minutes</string>
    <string name="CobbIngredients"> "
        INGREDIENTS:
        Sliced bacon(4 slices)
        paprika (1/2 tsp)
        Garlic powder (1/4 tsp)
        ¼ tsp pepper
        2 boneless skinless chicken breasts (about 1 pound)
        6 - 8 cups chopped romaine lettuce
        4 hard boiled eggs (quartered)
        1 cup cherry tomatoes (halved)
        1 avocado (diced)
        ½ cup blue cheese crumbles
        ¼ cup red onion
        2 tablespoons chopped chives (for garnish)
        ½ cup olive oil
        2 tablespoons red wine vinegar
        1 tablespoon dijon mustard" </string>

    <string name="cobbRecipe">"
        Step 1:Preheat the oven to 425°F. Place the bacon on a baking sheet lined with foil. Once the oven is preheated, cook the bacon for 15 - 20 minutes, until cooked and crispy. Crumble or chop into pieces once cooked.
Step 2:As the bacon cooks, in a small bowl mix together the paprika, garlic powder, salt and pepper. Sprinkle this mixture onto both sides of the chicken breasts.
Step 3:Heat 1 tablespoon olive oil in a large skillet over medium high heat. Add the chicken and cook, covered, 5 - 6 minutes on each side. The chicken should be cooked through and no longer pink in the middle.
Step 4:Make the salad dressing by whisking together the red wine vinegar, dijon mustard and olive oil. You can also use a store bought red wine vinaigrette (or balsamic vinaigrette).
Step 5:Assemble the salad: add the lettuce to a large bowl and then top it with all of the remaining ingredients except for the chives. Drizzle the dressing on top and then toss (use tongs if you have them). Sprinkle the chives on top.


    </string>

</resources>