<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.FoodApp.Custom">

    <TextView
        android:id="@+id/popup_rectangle"
        android:layout_width="353dp"
        android:layout_height="578dp"
        android:background="@drawable/logo_pinkrectangle"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/popup_receipe_title"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="33dp"
        android:layout_weight="1"
        android:fontFamily="@font/bs_reg"
        android:gravity="center"
        android:text="Bell Pepper Keto Nachos"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangle"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangle"
        app:layout_constraintTop_toTopOf="@+id/popup_rectangle" />


    <ScrollView
        android:layout_width="290dp"
        android:layout_height="467dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/popup_rectangle"
        app:layout_constraintStart_toStartOf="@+id/popup_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/popup_receipe_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:fontFamily="@font/bs_bold"
                android:text="@string/BellCookingTime"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:fontFamily="@font/bs_bold"
                android:text="@string/BellIngredients"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bs_bold"
                android:text="@string/receipeSubtitle"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/popup_instructions"
                android:layout_width="match_parent"
                android:layout_height="520dp"

                android:gravity="left"
                android:text="@string/BellRecipe"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/popup_rectangle"
                app:layout_constraintStart_toStartOf="@+id/popup_rectangle"
                app:layout_constraintTop_toBottomOf="@+id/popup_receipe_title" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>