<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewUserActivity">



    <!-- *GUIDELINES FOR CONSTRAINT REASONS* -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />
    <!-- *END OF GUIDELINES FOR CONSTRAINT REASONS* -->



    <!-- *RECTANGLES* -->
        <!--NOTE: RIGHT RECTANGLE ACCENT-->
        <TextView
        android:id="@+id/left_rectangle_accent"
        android:layout_width="231dp"
        android:layout_height="436dp"
        android:background="@drawable/right_accent_rectangle"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!--NOTE: BLUE RECTANGLE BEHIND INFORMATION-->
        <TextView
            android:id="@+id/info_rectangle"
            android:layout_width="268dp"
            android:layout_height="342dp"
            android:background="@drawable/logo_rectangle"
            android:textAlignment="center"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <!-- *END OF RECTANGLES* -->



    <!-- *NEW USER COMPONENTS* -->
    <!--NOTE: CREATE BUTTON
    IMPORTANT: "android:onClick="create_newuser" will need to be defined in Java -->
        <android.widget.Button
                android:id="@+id/create_button"
                android:layout_width="157dp"
                android:layout_height="53dp"
                android:layout_marginStart="63dp"
                android:layout_marginTop="301dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/login_button_background"
                android:fontFamily="@font/bs_bold"
                android:gravity="center"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="25sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/info_rectangle"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/info_rectangle"
                app:layout_constraintTop_toTopOf="@+id/info_rectangle"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />

        <!-- NOTE: INFORMATION LAYOUT (USERNAME,PASSWORD,EMAIL) -->
    <!-- *END OF USER COMPONENTS* -->



    <!-- *LOGIN BUTTON & QUESTION* -->
    <LinearLayout
        android:id="@+id/linear_create_info"
        android:layout_width="265dp"
        android:layout_height="231dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/info_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/info_rectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_rectangle"
        app:layout_constraintTop_toTopOf="@+id/info_rectangle"
        app:layout_constraintVertical_bias="0.701">

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="217dp"
            android:layout_height="32dp"
            android:layout_weight="1"

            android:background="@drawable/pink3_rectangle"
            android:fontFamily="@font/myraid"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            android:inputType="text"
            android:autofillHints="username"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="217dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/pink2_rectangle"
            android:fontFamily="@font/myraid"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="217dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/pink1_rectangle"
            android:fontFamily="@font/myraid"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/email"
            android:textColorHint="@color/pink_4"
            android:textColor="@color/pink_4"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintVertical_bias="0.943">

        <TextView
            android:id="@+id/signup_question"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/myraid"
            android:gravity="end"
            android:text="@string/made_account"
            android:textSize="19sp" />

        <Button
            android:id="@+id/back_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bs_bold"
            android:gravity="start"
            android:padding="9dp"
            android:text="@string/login"
            android:textColor="@color/signup_text_color"
            android:textSize="19sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <!-- *TITLE* -->
    <FrameLayout
        android:layout_width="362dp"
        android:layout_height="113dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/left_rectangle_accent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/bs_bold"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/blue_2"
            android:textSize="50sp"
            tools:ignore="TextContrastCheck" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>